--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -3,7 +3,7 @@ description: I'd like to propose some changes and enhancements
 title: "[Enhancement]: "
 labels: ["enhancement"]
 assignees:
-  - JaKooLit
+  - LinuxBeginnings
 
 body:
   - type: checkboxes
